# flow-decompiler

./: .gitignore  LICENSE  README.md  install.ps1  pyproject.toml  sample_namecall.b64  work_sample.b64
.superpowers/sdd/: task-1-report.md
docs/superpowers/plans/: 2026-07-10-startup-settings.md  2026-07-12-quality-harness-syntax-validity.md  2026-07-13-semantic-core.md
docs/superpowers/specs/: 2026-07-10-startup-settings-design.md  2026-07-12-decompiler-quality-design.md  2026-07-13-semantic-core-design.md
luau_decompiler/: __init__.py  analysis.py  binary.py  cfg.py  chunk.py  cli.py  compare.py  decompile.py  differential.py  differential_cli.py  disasm.py  opcodes.py  quality.py  quality_cli.py  regions.py  settings.py  ui.py  value_ir.py
tests/: test_analysis.py  test_cfg.py  test_chunk.py  test_cli.py  test_compare_fission.py  test_control_flow_extra.py  test_differential.py  test_disasm.py  test_parser_limits.py  test_quality.py  test_receive_bytecode.py  test_regions.py  test_settings.py  test_ui.py  test_value_ir.py
tests/fixtures/: mcp_default_assign.b64
tests/fixtures/differential/: captures.luau  closures_tables.luau  control_flow.luau  loops.luau  multi_return.luau  short_circuit_branches.luau  tables_methods.luau  varargs_results.luau
tools/: compare_fission.py  receive_bytecode.py
