[project]
name = "flow-decompiler"
version = "0.2.1"
description = "Flow Decompiler: Luau bytecode parser, disassembler, CFG builder, and source reconstruction."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
flow-decompiler = "luau_decompiler.cli:main"
luau-decompiler = "luau_decompiler.cli:main"
flow-decompiler-ui = "luau_decompiler.ui:main"
flow-quality = "luau_decompiler.quality_cli:main"

[tool.setuptools.packages.find]
include = ["luau_decompiler*"]
